GNOME Bugzilla – Bug 730673
Cannot change the language (French, English) of a document
Last modified: 2019-03-23 20:50:58 UTC
My language is French by default (system wide). To change it to English, I go to "Define language" and chose English. When I go back to this menu, French is highlighted. Highlighting misspelled words confirms that the language is actually French. As a consequence, one cannot highlight misspelled words for a language that is not the default. ----- Gedit 3.12.1 on Archlinux
hi, there's a bug and it's this one : select a language and validate it by ok seems to not working select a language by double-cliking and it works. This is weird and of course must be corrected. Pbor, nacho, can you confirm this ? thanks for your report.
Yes, I can reproduce too. I guess we broke something when touching .ui files
Fixed: https://git.gnome.org/browse/gedit/commit/?id=ae0f1f621904199177118dc77a7b28352afaaf09 But there are more room for improvement in this code. The whole .ui file should be used, instead of using it only for the content area of the dialog window.