spell-language-dialog: fix OK button

https://bugzilla.gnome.org/show_bug.cgi?id=730673